docker-compose deployment

--- a/about-service/Dockerfile
+++ b/about-service/Dockerfile
@@ -10,4 +10,6 @@ RUN npm install
 
 EXPOSE $PORT
 
-CMD PORT=$PORT npm start
+CMD ['./wait-for-it.sh', 'http://$PROXY_HOST:$PROXY_PORT', '--timeout=1 --strict -- echo "proxy is up"']
+
+CMD PORT=$PORT npm run docker:deploy
