--- a/desktop-service/package.json
+++ b/desktop-service/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "env $(cat ./dev/.env) nodemon server.js",
-    "deploy": "env $(cat ./prod/.env) node server.js",
-    "docker-build": "docker build . -t desktop-service:latest"
+    "start": "env $(cat .env) nodemon server.js",
+    "docker:deploy": "env $(cat docker.env) node server.js",
+    "docker:build": "docker build . -t desktop-service:latest"
   },
   "author": "",
   "license": "Apache-2.0",
