--- a/person-service/package.json
+++ b/person-service/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "env $(cat .env) nodemon server.js",
-    "deploy": "env $(cat .env) node server.js",
-    "docker-build": "docker build . -t person-service:latest"
+    "docker:deploy": "env $(cat docker.env) node server.js",
+    "docker:build": "docker build . -t person-service:latest"
   },
   "author": "",
   "license": "Apache-2.0",
