--- a/people-service/Dockerfile
+++ b/people-service/Dockerfile
@@ -10,6 +10,6 @@ RUN npm install
 
 EXPOSE $PORT
 
-CMD ['./wait-for-it.sh', 'http://$PROXY_HOST:$PROXY_PORT', '--timeout=1 --strict -- echo "proxy is up"']
+CMD ['./wait-for-it.sh', 'http://$REGISTRY_HOST:$REGISTRY_PORT', '--timeout=1 --strict -- echo "proxy is up"']
 
 CMD PORT=$PORT npm run docker:deploy
