docker-compose npm scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "services:install": "find ./*-service -maxdepth 1 -name package.json -execdir npm install \\;",
-    "services:docker": "find ./*-service -maxdepth 1 -name package.json -execdir npm run docker:build \\;"
+    "services:docker": "find ./*-service -maxdepth 1 -name package.json -execdir npm run docker:build \\;",
+    "services:up": "docker-compose up -d",
+    "services:down": "docker-compose down"
   },
   "repository": {
     "type": "git",
