--- a/desktop-service/package.json
+++ b/desktop-service/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "env $(cat .env) nodemon server.js",
+    "webapp:clean": "rm -f public/*",
     "webapp:build": "cd ./desktop-service-webapp/ && npm run build",
     "webapp:deploy": "mv ./desktop-service-webapp/dist/desktop-service-webapp/* ./public/",
     "docker:deploy": "node server.js",
