--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,18 @@
 version: '3'
-
 services:
   proxy-service:
     container_name: proxy-service
-    image: proxy-service:latest
+    image: 'proxy-service:latest'
     ports:
-      - 3000:3000
+      - '3000:3000'
     environment:
       - PORT=3000
       - NAME=proxy-service
-
   desktop-service:
     container_name: desktop-service
-    image: desktop-service:latest
+    image: 'desktop-service:latest'
     ports:
-      - 3001:3001
+      - '3001:3001'
     environment:
       - PORT=3001
       - REGISTRY_HOST=proxy-service
@@ -24,12 +22,11 @@ services:
       - proxy-service
     links:
       - proxy-service
-
   about-service:
     container_name: about-service
-    image: about-service:latest
+    image: 'about-service:latest'
     ports:
-      - 3004:3004
+      - '3004:3004'
     environment:
       - PORT=3004
       - REGISTRY_HOST=proxy-service
@@ -39,12 +36,11 @@ services:
       - proxy-service
     links:
       - proxy-service
-
   person-service:
     container_name: person-service
-    image: person-service:latest
+    image: 'person-service:latest'
     ports:
-      - 3003:3003
+      - '3003:3003'
     environment:
       - PORT=3003
       - REGISTRY_HOST=proxy-service
@@ -54,12 +50,11 @@ services:
       - proxy-service
     links:
       - proxy-service
-
   people-service:
     container_name: people-service
-    image: people-service:latest
+    image: 'people-service:latest'
     ports:
-      - 3002:3002
+      - '3002:3002'
     environment:
       - PORT=3002
       - REGISTRY_HOST=proxy-service
@@ -69,7 +64,6 @@ services:
       - proxy-service
     links:
       - proxy-service
-
 networks:
   services:
     driver: bridge
